RESOLVED FIXED185068
Fix color-filter to apply to text decorations
https://bugs.webkit.org/show_bug.cgi?id=185068
Summary Fix color-filter to apply to text decorations
Simon Fraser (smfr)
Reported 2018-04-26 22:02:29 PDT
Fix color-filter to apply to text decorations
Attachments
Patch (22.92 KB, patch)
2018-04-26 22:08 PDT, Simon Fraser (smfr)
zalan: review+
ews-watchlist: commit-queue-
Archive of layout-test-results from ews122 for ios-simulator-wk2 (2.20 MB, application/zip)
2018-04-26 23:35 PDT, EWS Watchlist
no flags
Archive of layout-test-results from ews202 for win-future (13.12 MB, application/zip)
2018-04-27 00:50 PDT, EWS Watchlist
no flags
Radar WebKit Bug Importer
Comment 1 2018-04-26 22:03:34 PDT
Simon Fraser (smfr)
Comment 2 2018-04-26 22:08:31 PDT
EWS Watchlist
Comment 3 2018-04-26 23:35:15 PDT
Comment on attachment 338969 [details] Patch Attachment 338969 [details] did not pass ios-sim-ews (ios-simulator-wk2): Output: http://webkit-queues.webkit.org/results/7477245 New failing tests: compositing/debug-borders-dynamic.html
EWS Watchlist
Comment 4 2018-04-26 23:35:17 PDT
Created attachment 338978 [details] Archive of layout-test-results from ews122 for ios-simulator-wk2 The attached test failures were seen while running run-webkit-tests on the ios-sim-ews. Bot: ews122 Port: ios-simulator-wk2 Platform: Mac OS X 10.13.4
EWS Watchlist
Comment 5 2018-04-27 00:50:19 PDT
Comment on attachment 338969 [details] Patch Attachment 338969 [details] did not pass win-ews (win): Output: http://webkit-queues.webkit.org/results/7477871 New failing tests: css3/color-filters/color-filter-text-decoration-shadow.html css3/color-filters/color-filter-text-shadow.html
EWS Watchlist
Comment 6 2018-04-27 00:50:31 PDT
Created attachment 338980 [details] Archive of layout-test-results from ews202 for win-future The attached test failures were seen while running run-webkit-tests on the win-ews. Bot: ews202 Port: win-future Platform: CYGWIN_NT-6.1-2.9.0-0.318-5-3-x86_64-64bit
Simon Fraser (smfr)
Comment 7 2018-04-27 09:11:49 PDT
Note You need to log in before you can comment on or make changes to this bug.